<resources>
    <string name="app_name">PnU</string>
    <string name="danh_muc_san_pham">Danh mục sản phẩm…</string>
    <string name="loi_thieu_info">Thông tin không được bỏ trống</string>
    <string name="thieu_OTP">Bạn chưa nhập mã xác thực</string>
    <string name="error_password">Mật khẩu phải chứa ít nhất 5 ký tự</string>
    <string name="error_phone">Số điện thoại không đúng định dạng</string>
    <string name="error_OTP">OTP chưa chính xác</string>
    <string name="error_OTP1">OTP phải là số có 6 chữ số</string>
    <string name="error_userName">Username đã tồn tại!</string>
    <string name="import_find">Nhập từ khóa tìm kiếm</string>
    <string name="dat_hang_thanh_cong">ĐẶT HÀNG THÀNH CÔNG</string>
    <string name="don_hang_duoc_dat_thanh_cong">Đơn hàng của bạn đã được đặt thành công</string>
    <string name="ma_giam_gia">Mã giảm giá:</string>
    <string name="mo_ta_sp">Mũ tai ếch dễ thương cho mèo. Kích cỡ đường kính. Size S: 26–28cm, Size M: 28–34cm. Chất liệu: làm từ vải len Bạn có thể Giữ Ấm đầu bé khi trời trở lạnh. Thời tiết sài gòn cũng sấp chuyển sang trời lạnh rồi vì vậy hãy sấm ngay một chiếc mũ cho bé nhà mình đi nào.</string>
    <string name="ten_sp">Mũ ếch dễ thương cho thú cưng</string>
    <string name="gia_sp">62000</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="chi_tiet_san_pham">Chi tiết sản phẩm</string>
    <string name="product_is_added">Sản phẩm đã được thêm vào giỏ hàng</string>
    <string name="view_cart">Xem giỏ hàng</string>
    <string name="order">Đặt hàng</string>
    <string name="total">TỔNG CỘNG:</string>
    <string name="dat_hang">ĐẶT HÀNG</string>
    <string name="note">Ghi chú cho người bán…</string>
    <string name="total_quantity_in_cart">7 sản phẩm</string>
    <string name="apply_voucher">Áp dụng</string>
    <string name="input_voucher">Nhập mã giảm giá</string>
    <string name="cart_is_empty">Không có sản phẩm nào trong giỏ hàng</string>
    <string name="total_price">0</string>
    <string name="customer_name">Nguyễn Văn A</string>
    <string name="customer_tel">0123456789</string>
    <string name="customer_address">Số 669 QL1A, khu phố 3, Thủ Đức, Thành phố Hồ Chí Minh</string>
    <string name="note_label">Tin nhắn:</string>
    <string name="shipping">Giao hàng tiêu chuẩn</string>
    <string name="shipping_cost">40.000 đ</string>
    <string name="shipping_label">Phí vận chuyển:</string>
    <string name="shipping_date">Nhận hàng vào: 04 Th11, 2021 – 11 Th11, 2021</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="COD">Thanh toán khi nhận hàng</string>
    <string name="total_2">Tổng tiền:</string>
    <string name="total_price_2">922.000 đ</string>
    <string name="total_1">Tạm tính:</string>
    <string name="total_price_1">882.000 đ</string>
    <string name="blog_title">Tiêu đề bài viết</string>
    <string name="blog_detail">Nội dung bài viết</string>
    <string name="check_empty_repass">Chưa nhập mật khẩu xác nhận</string>
    <string name="check_empty_newpass">Chưa nhập mật khẩu mới</string>
    <string name="check_empty_nowpass">Chưa nhập mật khẩu hiện tại</string>
    <string name="check_repass_newpass">Mật khẩu xác nhận và mật khẩu mới không giống nhau</string>
    <string name="check_db_nowpass">Mật khẩu hiện tại không đúng</string>
    <string name="check_valid_email">Email không hợp lệ</string>
    <string name="check_valid_phone">Số điện thoại không hợp lệ</string>
    <string name="check_valid_birthday">Ngày sinh không hợp lệ (dd/mm/yyyy)</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">This is channel 1</string>
    <string name="channel_name_2">Channel 2</string>
    <string name="channel_description_2">This is channel 2</string>
    <string name="text_demo">Hạt thức ăn khô cho chó Royal Canin Poodle Puppy</string>
    <string name="price_demo">394000</string>
    <string name="so_luong_sp">Số lượng: 1</string>
    <string name="nhac_nho">Vui lòng chuẩn bị số tiền tương ứng vào ngày giao hàng</string>
    <string name="dong_y_dieu_khoan">Tiến hành đặt hàng đồng nghĩa với việc bạn đồng ý tuân theo <font color='#1338BE'>Điều khoản của Pnu</font></string>
    <string name="tiep_tuc_mua">TIẾP TỤC MUA HÀNG</string>
    <string name="suggest">-------------------- Có thể bạn sẽ thích --------------------</string>
    <string name="shipping_2">Giao hàng nhanh</string>
    <string name="choose_shipping_method">Chọn phương thức giao hàng</string>
    <string name="you_may_like">Bạn có thể thích</string>
    <string name="view_all">Xem tất cả</string>
    <string name="des_product">Mô tả sản phẩm</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="hot_product_01">Đồ chơi mặt chó</string>
    <string name="hot_product_02">Áo thun tay hồng</string>
    <string name="hot_product_03">Mũ len thời trang</string>
    <string name="hot_product_04">Quần áo mùa hè</string>
    <string name="hot_product_05">Mũ ếch xanh</string>
    <string name="hot_product_06">Xương bông</string>
    <string name="dog_food_01">Hạt thức ăn khô cho chó Royal Canin Poodle Puppy</string>
    <string name="dog_food_02">Hạt khô cho chó Poodle trưởng thành Royal Canin Poodle Adult</string>
    <string name="dog_food_03">Thức ăn cho chó trưởng thành SMARTHEART</string>
    <string name="dog_food_04">Thức ăn cho chó con vị sữa Classic</string>
    <string name="dog_food_05">Thức ăn cho chó MOSHM</string>
    <string name="dog_food_06">Thức ăn cho chó trưởng thành Pedigree vị bò</string>
    <string name="dog_food_07">Thức ăn cho chó con hạt mềm ZENITH Puppy Chicken - Potato</string>
    <string name="dog_food_08">Thức ăn cho chó vị cá biển MEC Wild Taste Ocean Deep Fish</string>
    <string name="cat_food_01">Hạt khô cho mèo con Royal Canin Kitten</string>
    <string name="cat_food_02">Hạt thức ăn khô cho mèo Royal Canin Renal</string>
    <string name="cat_food_03">Thức ăn hạt WHISKAS cho mèo</string>
    <string name="cat_food_04">Thức ăn cho mèo MININO Vị cá Ngừ</string>
    <string name="cat_food_05">Thức ăn cho mèo ME-O 1,2KG</string>
    <string name="cat_food_06">Thức ăn cho mèo Kitekat Vị Cá Thu</string>
    <string name="cat_food_07">Hạt Reflex Food Chicken cho mèo</string>
    <string name="cat_food_08">Thức Ăn Hạt Cho Mèo Trưởng Thành Catsrang</string>
    <string name="pet_toy_01">Đồ chơi bóng mặt chó</string>
    <string name="pet_toy_02">Con gà đồ chơi chó mèo</string>
    <string name="pet_toy_03">Đồ chơi hình tôm hùm cho chó mèo</string>
    <string name="pet_toy_04">Đồ chơi cao su cho Squeaky Dog</string>
    <string name="pet_toy_05">Đồ chơi cho chó mèo hình cá chim</string>
    <string name="pet_toy_06">Bóng lồng chuột cho chó mèo</string>
    <string name="pet_toy_07">Đồ chơi cao su hình xương cá</string>
    <string name="pet_toy_08">Đồ chơi xương bông phát ra tiếng</string>
    <string name="pet_fashion_01">Áo thun có tay màu Hồng cho chó</string>
    <string name="pet_fashion_02">Vòng cổ thú cưng hình cổ áo</string>
    <string name="pet_fashion_03">Mũ len thời trang dễ thương cho chó mèo</string>
    <string name="pet_fashion_04">Thời Trang Chó Mèo nhện Halloween</string>
    <string name="pet_fashion_05">Áo thun liền quần cho chó mèo</string>
    <string name="pet_fashion_06">Quần áo thú cưng thoải mái mùa hè</string>
    <string name="pet_fashion_07">Quần áo cho chó mùa hè cho chó nhỏ</string>
    <string name="pet_fashion_08">Mũ ếch dễ thương cho thú cưng</string>
    <string name="des_dog_food_01" formatted="false">
        <![CDATA[
        <p>Sau giai đoạn sơ sinh, cai sữa chó con cần một lượng khẩu phần ăn khá khắt khe. Bởi giai đoạn này dạ dày của Poodle vẫn còn khá yếu. Chúng không hấp thu được những chất quá nhiều dinh dưỡng, hoặc các loại thức ăn quá cứng. Sản phẩm Hạt thức ăn khô cho chó Royal Canin Poodle Puppy là sản phẩm dành cho giống chó Poodle từ 2 – 10 tháng tuổi.</p>
        <p><b>Chi tiết sản phẩm</b></p>
        <p><b>Xuất xứ:</b> Pháp</p>
        <p><b>Trọng lượng:</b> 500gr, 1.5kg</p>
        <p><b>Thành phần</b></p>
        <p>Bắp, mỡ gà, gluten lúa mì, bột gluten bắp, lúa mì, hương vị tự nhiên, dầu cá. Aluminat silic natri, dầu thực vật, dầu ăn khô, monocalcium phosphate, canxi Carbonat. Canxi sulfat, DL-methionine, clorua kali, vỏ hạt psyllium, muối, fructooligosaccharides, tripolyphosphate natri. Menhydrolyzed, vitamin [DL-alpha tocopherol acetate (nguồn vitamin E), inositol, niacin bổ sung, L-ascorbyl-2 (Vitamin C), D-canxi pantothenate, biotin, pyridoxin hydrochloride (vitamin B6),v.v.</p>
        <p><b>Công Dụng</b></p>
        <ul>
            <li>&nbsp; Thức ăn khô cho chó Royal Canin Poodle Puppy giúp duy trì sức khoẻ của chó Poodle sau cai sữa, hỗ trợ năng lượng phát triển cho cún.</li>
            <li>&nbsp; Hình dạng hạt độc quyền, với hạt mềm, giúp chó dễ dàng nhai.</li>
            <li>&nbsp; Với các dưỡng chất dễ tiêu hóa, thức ăn hạt còn hỗ trợ tiêu hóa khỏe mạnh.</li>
            <li>&nbsp; Hỗ trợ sức khỏe tăng cường hệ thống miễn dịch.</li>
            <li>&nbsp; 100% dinh dưỡng cân bằng.</li>
            <li>&nbsp; 100% đảm bảo an toàn.</li>
        </ul>
        ]]>
    </string>
    <string name="des_pet_fashion_08">
        <![CDATA[
        <p>Bạn có thể Giữ Ấm đầu bé khi trời trở lạnh. Thời tiết sài gòn cũng sấp chuyển sang trời lạnh rồi vì vậy hãy sấm ngay một chiếc mũ cho bé nhà mình đi nào.</p>
        <p><b>Chi tiết sản phẩm</b></p>
        <p><b>Chất liệu:</b> Len đan</p>
        <p><b>Kích thước:</b> free size</p>
        <p><b>Màu sắc:</b> Xanh lá</p>
        <p><b>Đặc điểm:</b></p>
        <ul>
            <li>&nbsp; Rất thích hợp cho bé cỡ nhỏ và những bé cỡ trung. Khi đội vào nhìn bé cực đáng yêu lun khi ba mẹ ôm bé cũng sẽ cực kì thích luôn đó nha!</li>
            <li>&nbsp; Bạn có thể Giữ Ấm đầu bé khi trời trở lạnh. Thời tiết sài gòn cũng sấp chuyển sang trời lạnh rồi vì vậy hãy sấm ngay một chiếc mũ cho bé nhà mình đi nào.</li>
            <li>&nbsp; Mũ cũng rất thích hợp để cho bé đi du lịch, ra ngoài đường ai nhìn cũng sẽ thích.</li>
            <li>&nbsp; Kích cỡ: free size, thích hợp cho mèo nhỏ và vừa</li>
        </ul>
        ]]>
    </string>
    <string name="pnu_little_puppies_for_big_heat">PnU - Little puppies for big heat</string>
</resources>