<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"

    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imvTick"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/tick_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/txtProductIsAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_is_added"
            android:textColor="@color/tick"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/imvTick"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:id="@+id/imvClose"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/close_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">



        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imvProductThumb"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/pet_fashion_03"
            app:riv_corner_radius="8dp"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/txtProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_fashion_03"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txtProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_demo"
                android:textColor="@color/price_tag"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnViewCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/view_cart"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</LinearLayout>