<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fragment.category.DesProductFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_yellow">

            <ImageView
                android:id="@+id/imvClose"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/white_close_icon"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/txtProductDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/des_product"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/txtDesName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/product_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/imvDesThumb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pet_fashion_08"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/txtDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/des_pet_fashion_08"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@android:color/transparent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pnu_little_puppies_for_big_heat"
                        android:gravity="center"
                        android:textColor="@color/ink_01"
                        android:textSize="14sp"
                        android:textStyle="italic"/>

                </RelativeLayout>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</LinearLayout>